--- a/gmaps.html
+++ b/gmaps.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
-<title>heatmap.js GMaps Heatmap Layer</title>
+<title> EventBright </title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<style>
 			body, html {
@@ -58,21 +58,17 @@
 				margin-top:0;
 			}
 		</style>
-<link rel="shortcut icon" type="image/png" href="http://www.patrick-wied.at/img/favicon.png" />
 <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
-
 </head>
 <body>
 <div id="main">
 			<h1>GMaps Heatmap Overlay</h1>
-			<a href="http://www.patrick-wied.at/static/heatmapjs/" title="heatmap.js">Back to the project page</a><br /><br />
 			<div id="heatmapArea">
 			
 			</div>
 			<div id="configArea">
 				<h2>Sidenotes</h2>
 				This is a demonstration of a canvas heatmap gmaps overlay<br /><br />
-				<strong>Note: this is an early release of the heatmap layer. Please feel free to <a href="https://github.com/pa7/heatmap.js" target="_blank">contribute patches</a>. (e.g: correct datapoint pixels after dragrelease (in draw))</strong>
 				<div id="tog" class="btn">Toggle HeatmapOverlay</div>
 				<div id="gen" class="btn">Add 5 random lat/lng coordinates</div>
                     <input type="text" id="link-box"/>
@@ -80,7 +76,6 @@
                     <input class="btn" type="button" id="search-button">
 			</div>
 			
-<div style="position:absolute;width:940px;top:750px;text-align:center;"><a href="http://www.patrick-wied.at/static/heatmapjs/">heatmap.js</a> by <a href="http://www.patrick-wied.at" target="_blank">Patrick Wied</a></div>
 
 </div>
 <script type="text/javascript" src="./bower_components/heatmap.js/src/heatmap-gmaps.js"></script>
