--- a/index.html
+++ b/index.html
@@ -14,10 +14,8 @@
 			</div>
 			<div id="configArea">
 				<h2>Sidenotes</h2>
-				<div id="tog" class="btn"></div>
-                    <input type="text" id="link-box"/>
-                    <br>
-                    <input class="btn" type="button" id="search-button">
+				<div id="tog" class="btn"> toggle heatmap </div>
+                <div id="display"> </div>
 			</div>
 			
 
