--- a/index.html
+++ b/index.html
@@ -20,8 +20,11 @@
 			
 
 </div>
-<script type="text/javascript" src="./bower_components/heatmap.js/src/heatmap-gmaps.js"></script>
-<script type="text/javascript" src="./bower_components/heatmap.js/src/heatmap.js"></script>
+<!-- <script type="text/javascript" src="./bower_components/heatmap.js/src/heatmap-gmaps.js"></script> -->
+<!-- <script type="text/javascript" src="./bower_components/heatmap.js/src/heatmap.js"></script> -->
+<script type="text/javascript" src="./heatmap-gmaps.js"></script>
+<script type="text/javascript" src="./heatmap.js"></script>
+
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
 <script type="text/javascript" src="./script.js">
 
