Changed script order again

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
 <title> EventBright </title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
+<script type="text/javascript" src="https://maps.google.com/maps/api/js?sensor=false"></script>
 <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
@@ -20,8 +20,8 @@
 			
 
 </div>
-<script type="text/javascript" src="./bower_components/heatmap.js/src/heatmap.js"></script>
-<script type="text/javascript" src="./bower_components/heatmap.js/src/heatmap-gmaps.js"></script>
+<script type="text/javascript" src="./heatmap.js"></script>
+<script type="text/javascript" src="./heatmap-gmaps.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
 <script type="text/javascript" src="./script.js">
 
