Added flavor text

--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
 			</div>
 			<div id="configArea">
 				<h2>Sidenotes</h2>
-				<div id="tog" class="btn"> toggle heatmap </div>
+                <p> Displays a heatmap of EventBrite events near your current browser location</p>
+                <p> Must enable location services for funcitonality, check the console log if it's unresponsive</p>
+				<div id="tog" class="btn"> Toggle Heatmap </div>
                 <div id="display"> </div>
 			</div>
 			
